tests/invalid/module_level_while_stmt/main.py
def run_case() -> None:
    print("unreachable")


while False:
    pass

if __name__ == "__main__":
    run_case()
